# coderlm

./: CLAUDE.md  README.md
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: coderlm-analyst.md  coderlm-architect.md  coderlm-scout.md  coderlm-subcall.md
.claude/coderlm_state/: session.json
.claude/skills/coderlm/: SKILL.md
.claude/skills/coderlm/references/: api-reference.md
.claude/skills/coderlm/scripts/: coderlm_cli.py
.github/workflows/: docker.yml
commands/: coderlm.md
hooks/: hooks.json
scripts/: coderlm-daemon.sh  session-init.sh  session-stop.sh
server/: Cargo.toml  Dockerfile  README.md  REPL_to_API.md
server/src/: config.rs  main.rs
server/src/git/: github.rs
server/src/index/: file_entry.rs  file_tree.rs  mod.rs  walker.rs  watcher.rs
server/src/ops/: annotations.rs  cache.rs  content.rs  history.rs  mod.rs  structure.rs  symbol_ops.rs
server/src/server/: errors.rs  mod.rs  routes.rs  session.rs  state.rs
server/src/symbols/: mod.rs  parser.rs  symbol.rs
server/src/symbols/queries/: go.rs  mod.rs  python.rs  rust.rs  typescript.rs
